logs/django-simple-utilities.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_simple_utilities-0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/utilities'...
Listing './lib/python3.5/site-packages/utilities/admin'...
Listing './lib/python3.5/site-packages/utilities/dashboard'...
Listing './lib/python3.5/site-packages/utilities/forms'...
Listing './lib/python3.5/site-packages/utilities/localization'...
Listing './lib/python3.5/site-packages/utilities/models'...
Compiling './lib/python3.5/site-packages/utilities/relativedelta.py'...
***   File "./lib/python3.5/site-packages/utilities/relativedelta.py", line 118
    raise TypeError, "relativedelta only diffs datetime/date"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/utilities/static'...
Listing './lib/python3.5/site-packages/utilities/static/utilities'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/admin'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/admin/js'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/js'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/js/forms'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/js/models'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/js/models/tinymce'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/js/models/tinymce/examples'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/js/models/tinymce/jscripts'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/js/order'...
Listing './lib/python3.5/site-packages/utilities/templates'...
Listing './lib/python3.5/site-packages/utilities/templates/admin'...
Listing './lib/python3.5/site-packages/utilities/templates/admin_tp'...
Listing './lib/python3.5/site-packages/utilities/templates/admin_tp/auth'...
Listing './lib/python3.5/site-packages/utilities/templates/admin_tp/auth/user'...
Listing './lib/python3.5/site-packages/utilities/templates/admin_tp/edit_inline'...
Listing './lib/python3.5/site-packages/utilities/templates/admin_tp/includes'...
Listing './lib/python3.5/site-packages/utilities/templates/mail'...
Listing './lib/python3.5/site-packages/utilities/templates/mail/admin'...
Listing './lib/python3.5/site-packages/utilities/templatetags'...
Listing './lib/python3.5/site-packages/utilities/view'...
Listing './share'...
Listing './share/python-wheels'...
